still trying to fix invisible link error...

--- a/app/assets/stylesheets/map.css.scss
+++ b/app/assets/stylesheets/map.css.scss
@@ -56,7 +56,7 @@
 	top: 44%;
 	left: 41.8%;
 	.stationLink {
-		font-size: 0.99em;
+		font-size: 1.01em;
 	}
 } 
 
@@ -65,7 +65,7 @@
 	top: 56.7%;
 	left: 8.1%;
 	.stationLink {
-		font-size: 1em;
+		font-size: 1.1em;
 	}
 } 
 
@@ -74,7 +74,7 @@
 	top: 41%;
 	left: 42%;
 	.stationLink {
-		font-size: 0.9em;
+		font-size: 1.1em;
 	}
 } 
 
